# twitterFake

./: .gitignore  README.md
backend/: manage.py  pyproject.toml  requirements.txt
backend/posts/: models.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_initial.py
backend/social/: models.py  serializers.py  urls.py  views.py
backend/social/migrations/: 0001_initial.py  0002_initial.py
backend/twitterFake/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/management/commands/: seed.py
backend/users/migrations/: 0001_initial.py
frontend/: .env  .eslintrc.json  package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.tsx  routes.tsx
frontend/src/components/Bio/: index.tsx  styles.ts
frontend/src/components/LeftSidebar/: index.tsx  styles.ts
frontend/src/components/Post/: inde.tsx  index.tsx  styles.ts
frontend/src/components/PostSubmit/: index.tsx  styles.ts
frontend/src/components/ProtectedRoute/: index.tsx
frontend/src/components/RightSidebar/: index.tsx  styles.ts
frontend/src/pages/CreateAccount/: index.tsx  styles.ts
frontend/src/pages/EditProfile/: index.tsx  styles.ts
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Login/: index.tsx  styles.ts
frontend/src/pages/Profile/: index.tsx  styles.ts
frontend/src/services/: api.ts
frontend/src/store/: authSlice.ts  index.ts
frontend/src/styles/: index.ts  variables.ts
